--- a/scss/picker.scss
+++ b/scss/picker.scss
@@ -127,6 +127,7 @@
           text-align: center;
           line-height: $option-height;
           font-size: 1.32rem;
+          cursor: pointer;
 
           @media screen and (min-width: 768px) {
             &:hover {
