--- a/examples/demo.css
+++ b/examples/demo.css
@@ -211,6 +211,7 @@ ul, li {
   text-align: center;
   line-height: 3.4rem;
   font-size: 1.32rem;
+  cursor: pointer;
 }
 @media screen and (min-width: 768px) {
   .picker > .container .popup .list-wrap li:hover {
