--- a/scss/demo.scss
+++ b/scss/demo.scss
@@ -233,7 +233,7 @@ $m-click-area-color: #777777;
           line-height: $item-height;
         }
         .edit {
-          overflow: hidden;
+          //overflow: hidden;
           margin-left: 7rem;
           padding: 1px;
           height: $item-height + 0.1rem;
