--- a/css/picker.css
+++ b/css/picker.css
@@ -2,17 +2,24 @@
   position: relative;
 }
 .picker > .container {
-  position: fixed;
+  position: relative;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
   z-index: 100;
-  top: 0;
+  top: 1px;
   left: -10000px;
-  width: 100%;
-  height: 100%;
   -webkit-transition: left 0ms cubic-bezier(0.23, 1, 0.32, 1) 450ms;
   -moz-transition: left 0ms cubic-bezier(0.23, 1, 0.32, 1) 450ms;
   transition: left 0ms cubic-bezier(0.23, 1, 0.32, 1) 450ms;
+}
+@media screen and (max-width: 767px) {
+  .picker > .container {
+    position: fixed;
+    top: 0;
+    left: -10000px;
+    width: 100%;
+    height: 100%;
+  }
 }
 .picker > .container.table {
   display: table;
@@ -23,17 +30,19 @@
   -moz-transition: left 0ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
   transition: left 0ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
+.picker > .container.show .overlay {
+  left: 0;
+}
 .picker > .container .overlay {
-  position: absolute;
+  position: fixed;
   height: 100%;
   width: 100%;
   z-index: 9;
   top: 0;
-  left: 0;
+  left: -10000px;
   opacity: 1;
   -webkit-tap-highlight-color: transparent;
   will-change: opacity;
-  background-color: rgba(0, 0, 0, 0.54118);
   -webkit-transform: translateZ(0);
   -moz-transform: translateZ(0);
   -ms-transform: translateZ(0);
@@ -61,24 +70,20 @@
   }
 }
 .picker > .container .popup {
-  position: relative;
+  position: absolute;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
   -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1);
   -moz-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1);
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1);
-  width: 75%;
-  height: 23.8rem;
-  max-width: 95%;
   margin: 0 auto;
   z-index: 10;
   font-size: 1.2rem;
-  color: #fff;
-  background-color: rgba(50, 50, 50, 0.96);
   opacity: 0;
 }
 @media screen and (max-width: 767px) {
   .picker > .container .popup {
+    bottom: 0;
     width: 100%;
     max-width: 100%;
     height: 23.8rem;
@@ -91,6 +96,8 @@
 }
 @media screen and (min-width: 768px) {
   .picker > .container .popup {
+    height: 23.8rem;
+    width: 20rem;
     -webkit-transform: translate3d(0, -64px, 0);
     -moz-transform: translate3d(0, -64px, 0);
     -ms-transform: translate3d(0, -64px, 0);
@@ -100,7 +107,6 @@
 }
 .picker > .container .popup.show {
   opacity: 1;
-  top: 0;
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   -ms-transform: translate3d(0, 0, 0);
@@ -152,14 +158,12 @@
   left: 0;
   right: 0;
   height: 10.2rem;
-  background-color: rgba(50, 50, 50, 0.72);
   box-sizing: border-box;
   z-index: 12;
   pointer-events: none;
 }
 .picker > .container .popup > .cover.upper {
   top: 0;
-  border-bottom: 1px solid rgba(85, 85, 85, 0.9);
 }
 @media screen and (max-width: 767px) {
   .picker > .container .popup > .cover.upper {
@@ -168,10 +172,47 @@
 }
 .picker > .container .popup > .cover.lower {
   bottom: 0;
-  border-top: 1px solid rgba(85, 85, 85, 0.9);
 }
 @media screen and (max-width: 767px) {
   .picker > .container .popup > .cover.lower {
     height: 13.6rem;
   }
+}
+.picker > .container .popup.light {
+  color: #666;
+  background-color: rgba(255, 255, 255, 0.96);
+}
+@media screen and (max-width: 767px) {
+  .picker > .container .popup.light {
+    border-top: 1px solid #ccc;
+    box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.08);
+  }
+}
+@media screen and (min-width: 768px) {
+  .picker > .container .popup.light {
+    border: 1px solid #ccc;
+    box-shadow: 0 1px 5px #ddd;
+  }
+}
+.picker > .container .popup.light > .cover {
+  background-color: rgba(240, 240, 240, 0.7);
+}
+.picker > .container .popup.light > .cover.upper {
+  border-bottom: 1px solid #ccc;
+}
+.picker > .container .popup.light > .cover.lower {
+  border-top: 1px solid #ccc;
+}
+.picker > .container .popup.dark {
+  color: #fff;
+  background-color: rgba(50, 50, 50, 0.96);
+}
+.picker > .container .popup.dark > .cover {
+  background-color: rgba(50, 50, 50, 0.72);
+}
+.picker > .container .popup.dark > .cover.upper {
+  border-bottom: 1px solid rgba(85, 85, 85, 0.9);
+}
+.picker > .container .popup.dark > .cover.lower {
+  border-top: 1px solid rgba(85, 85, 85, 0.9);
 }
