--- a/css/picker.css
+++ b/css/picker.css
@@ -3,7 +3,7 @@
   .picker > .container {
     position: relative;
     box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     z-index: 100;
     top: 1px;
     left: -10000px;
@@ -34,7 +34,7 @@
       top: 0;
       left: -10000px;
       opacity: 1;
-      -webkit-tap-highlight-color: transparent;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       will-change: opacity;
       -webkit-transform: translateZ(0);
       -moz-transform: translateZ(0);
@@ -55,7 +55,7 @@
     .picker > .container .popup {
       position: absolute;
       box-sizing: border-box;
-      -webkit-tap-highlight-color: transparent;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1);
       -moz-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1);
       transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1);
